Fix stale assertion in attemptToForceStringArrayModeByToStringConversion(). https://bugs.webkit.org/show_bug.cgi?id=192770 <rdar://problem/46449037>

Reviewed by Keith Miller.

JSTests:

* stress/force-string-arrayMode-on-originalNonArray-array-class.js: Added.

Source/JavaScriptCore:

This assertion was added before Array::OriginalNonArray was introduced.  It just
needs to be updated to allow for Array::OriginalNonArray.

* dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::attemptToForceStringArrayModeByToStringConversion):



Canonical link: https://commits.webkit.org/207344@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239287 268f45cc-cd09-0410-ab3c-d52691b4dbfc